cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_iec/enum_E.plctype
TYPE enum_E:
    (elit_m1, elit_m2);
END_TYPE
